<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/taxi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:text="@string/taxi"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/news"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:text="@string/news"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/video"
        app:layout_constraintTop_toBottomOf="@id/taxi" />

    <Button
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:text="@string/video"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/crosszero"
        app:layout_constraintTop_toBottomOf="@id/news" />

    <Button
        android:id="@+id/crosszero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:text="@string/cross_zero"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/voice"
        app:layout_constraintTop_toBottomOf="@id/video" />

    <Button
        android:id="@+id/voice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:text="@string/voice"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crosszero" />

</androidx.constraintlayout.widget.ConstraintLayout>